// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-require-statements can find dynamic imports 1`] = `
Array [
  Object {
    "path": "./",
    "type": "glob",
  },
  Object {
    "path": "./page/",
    "type": "glob",
  },
]
`;

exports[`get-require-statements can find import promises 1`] = `
Array [
  Object {
    "path": "react-dom",
    "type": "direct",
  },
]
`;

exports[`get-require-statements can find plain requires 1`] = `
Array [
  Object {
    "path": "react",
    "type": "direct",
  },
  Object {
    "path": "react-dom",
    "type": "direct",
  },
]
`;

exports[`get-require-statements can find reexports 1`] = `
Array [
  Object {
    "path": "./Hello",
    "type": "direct",
  },
]
`;

exports[`get-require-statements can find relative imports 1`] = `
Array [
  Object {
    "path": "./Hello",
    "type": "direct",
  },
]
`;

exports[`get-require-statements can find simple requires 1`] = `
Array [
  Object {
    "path": "react",
    "type": "direct",
  },
  Object {
    "path": "react-dom",
    "type": "direct",
  },
]
`;

exports[`get-require-statements can work with real life code 1`] = `
Array [
  Object {
    "path": "react",
    "type": "direct",
  },
  Object {
    "path": "react-redux",
    "type": "direct",
  },
  Object {
    "path": "transition-group",
    "type": "direct",
  },
  Object {
    "path": "react-universal-component",
    "type": "direct",
  },
  Object {
    "path": "../selectors/isLoading",
    "type": "direct",
  },
  Object {
    "path": "../css/Switcher.css",
    "type": "direct",
  },
  Object {
    "path": "./",
    "type": "glob",
  },
]
`;
